--- a/puppet.conf
+++ b/puppet.conf
@@ -1,15 +1,13 @@
 [main]
   pluginsync = true
   confdir=/etc/puppet
-  environment=default
+  environment = default
+  environmentpath = $confdir/environments
 
 [master]
   allow_duplicate_certs = True
   ssldir = /var/lib/puppet/ssl
-  node_name = facter
   facts_terminus = yaml
-  node_terminus = exec
-  external_nodes = /usr/bin/env PUPPET_DASHBOARD_URL=http://localhost:3000 /usr/share/puppet-dashboard/bin/external_node
   data_binding_terminus = hiera
   hiera_config = /etc/hiera.yaml
   storeconfigs = true
@@ -17,8 +15,8 @@
   reports = store, http, puppetdb
   dns_alt_names = puppet, localhost
 
-  manifest    = $confdir/environments/$environment/manifests/site.pp
-  modulepath  = $confdir/environments/$environment/modules
+  environmentpath = $confdir/environments
+
 
 [agent]
   ssldir = /var/lib/puppet/ssl
