--- a/supervisor.conf
+++ b/supervisor.conf
@@ -11,18 +11,18 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///var/run//supervisor.sock
 
-[program:sshd]
-priority=5
+[program:nginx]
+priority=10
 directory=/tmp
-command=/usr/sbin/sshd -D
+command=/etc/init.d/nginx start
 user=root
 autostart=true
 autorestart=true
 
-[program:apache2]
+[program:unicorn]
 priority=10
 directory=/tmp
-command=/usr/sbin/apache2ctl -D FOREGROUND
+command=/usr/bin/unicorn -c /etc/puppet/unicorn.rb /usr/share/puppet/ext/rack/config.ru
 user=root
 autostart=true
 autorestart=true
@@ -35,41 +35,14 @@ user=root
 autostart=true
 autorestart=true
 
-[program:mysql]
-priority=10
-directory=/tmp
-command=/usr/sbin/mysqld
-user=root
-autostart=true
-autorestart=true
-
-
 [program:puppetdb]
 priority=20
 directory=/tmp
-command=/usr/bin/java -Xmx192m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/var/log/puppetdb/puppetdb-oom.hprof  -jar /usr/share/puppetdb/puppetdb.jar services -c /etc/puppetdb/conf.d
+command=/etc/init.d/puppetdb start
 user=puppetdb
 autostart=true
 autorestart=true
 stopsignal=QUIT
-
-[program:puppet-dashboard]
-priority=30
-directory=/usr/share/puppet-dashboard
-command=ruby ./script/server
-environment=RAILS_ENV=production
-user=root
-autostart=true
-autorestart=true
-
-[program:puppet-dashboard-workers]
-priority=35
-directory=/usr/share/puppet-dashboard
-command=ruby ./script/delayed_job -p dashboard -n 2 -m run
-environment=RAILS_ENV=production
-user=root
-autostart=true
-autorestart=false
 
 [program:puppetboard]
 priority=40
