allow for your code to run within the puppetmaster

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -17,7 +17,9 @@ directory=/tmp
 command=/etc/init.d/nginx start
 user=root
 autostart=true
-autorestart=true
+autorestart=false
+exitcodes=0,2
+stopsignal=TERM
 
 [program:unicorn]
 priority=10
@@ -39,10 +41,14 @@ autorestart=true
 priority=20
 directory=/tmp
 command=/etc/init.d/puppetdb start
-user=puppetdb
+user=root
 autostart=true
-autorestart=true
-stopsignal=QUIT
+autorestart=false
+numprocs=1
+startsecs=20
+startretries=0
+exitcodes=0,2
+stopsignal=TERM
 
 [program:puppetboard]
 priority=40
